--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "sit323-737-2023-t1-prac4p",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,5 +20,7 @@
     "express": "^4.18.2",
     "node": "^19.8.1",
     "winston": "^3.8.2"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
