--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "homepage": "https://github.com/rajayarli/sit323-737-2023-t1-prac4p#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "nginx": "^1.0.8",
     "node": "^19.8.1",
     "winston": "^3.8.2"
   },
-  "devDependencies": {},
   "description": ""
 }
