--- a/createReplicaSet.yaml
+++ b/createReplicaSet.yaml
@@ -7,7 +7,7 @@ metadata:
     tier: frontend
 spec:
   # modify replicas according to your case
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       tier: frontend
@@ -18,6 +18,6 @@ spec:
     spec:
       containers:
       - name: test
-        image: 68017237/image1
+        image: 68017237/image1:latest
         ports:
         - containerPort: 8080
