--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3'
 
 services:
   main:
-    image: 68017237/image1
+    image: 68017237/image1:latest
     healthcheck:
       test: ["CMD"]
       interval: 30s
       timeout: 10s
       retries: 3
-    restart: always
+    restart: never
 
   
