--- a/createReplicaSet.yaml
+++ b/createReplicaSet.yaml
@@ -18,6 +18,6 @@ spec:
     spec:
       containers:
       - name: test
-        image: 68017237/image1:latest
+        image: 68017237/new-app:latest
         ports:
         - containerPort: 8080
